# src/routes/invoice-router.js
@@ -8,8 +8,14 @@ import ValidationInvoicePost from '../validation/invoice-post-validation';
 const router = express.Router();
 
 router.get('/', Auth('a'), invoiceController.getInvoices);
+router.get('/my', Auth('u'), invoiceController.getInvoicesByUser);
 router.get('/:id', Auth('u'), invoiceController.getInvoice);
-router.post('/', ValidationInvoicePost, invoiceController.createInvoice);
+router.post(
+  '/',
+  Auth('u'),
+  ValidationInvoicePost,
+  invoiceController.createInvoice,
+);
 router.patch('/:id', Auth('u'), invoiceController.updateInvoice);
 router.delete('/:id', Auth('u'), invoiceController.deleteInvoice);
 
